k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: infrawatch-backend
  namespace: default
  labels:
    app: infrawatch-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: infrawatch-backend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: infrawatch-backend
    spec:
      containers:
        - name: infrawatch-backend
          image: YOUR_DOCKERHUB_USERNAME/infrawatch-backend:latest
          ports:
            - containerPort: 3001
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "250m"
          livenessProbe:
            httpGet:
              path: /api/cluster/overview
              port: 3001
            initialDelaySeconds: 15
            periodSeconds: 20
          readinessProbe:
            httpGet:
              path: /api/cluster/overview
              port: 3001
            initialDelaySeconds: 5
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: infrawatch-backend
  namespace: default
spec:
  selector:
    app: infrawatch-backend
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
  type: ClusterIP
